[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/AutotileGenerator/Dock.gd" type="Script" id=1]

[node name="Dock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 320.0
margin_bottom = 164.0
text = "Save Autotile"

[node name="FileDialog" type="FileDialog" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 500.0
margin_bottom = 299.0
rect_min_size = Vector2( 500, 250 )
window_title = "Save To Dir"
resizable = true
mode_overrides_title = false
current_dir = "res://textures"
current_file = "textures"
current_path = "res://textures/textures"

[node name="Container" type="Control" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 320.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 32 )

[node name="Button_tallWalls_tiles64w184h_offset0x-120y" type="CheckButton" parent="VBoxContainer"]
margin_top = 236.0
margin_right = 320.0
margin_bottom = 276.0
text = "tallWalls_tiles64w184h_offset0x-120y"

[node name="Button_topDownThickWalls_tiles64w88h" type="CheckButton" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 320.0
margin_bottom = 336.0
text = "tallWalls_tiles64w184h_offset0x-120y"

[node name="Button_topDownWalls_tiles64w64h" type="CheckButton" parent="VBoxContainer"]
margin_top = 356.0
margin_right = 320.0
margin_bottom = 396.0
text = "tallWalls_tiles64w184h_offset0x-120y"

[node name="Button_topDownFloor_tiles64w64h" type="CheckButton" parent="VBoxContainer"]
margin_top = 416.0
margin_right = 320.0
margin_bottom = 456.0
text = "tallWalls_tiles64w184h_offset0x-120y"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="dir_selected" from="VBoxContainer/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="VBoxContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="hide" from="VBoxContainer/FileDialog" to="." method="_on_FileDialog_hide"]
